# asgard-alignment

./: .gitignore  .readthedocs.yaml  None  README.md  beam1_test.toml  darks.py  install.sh  motor_info_full_system.json  motor_info_master.json  push_test.py  pyproject.toml  requirements.txt  setup.sh  spinview_reqs.txt  undo_setup.sh
DMShapes/: BEST_calibrated_DMflat_12-09-2024T10.04.32.csv  delme_BEST_calibrated_DMflat_12-09-2024T10.04.32.csv
_old_instr_states/: #before_shutdown_6-7-25.json#
asgard_alignment/: AsgardDevice.py  BMC_DM.py  Baldr_phasemask.py  Cameras.py  Controllino.py  CustomMotors.py  DM_shared_memory_server.py  DM_shm_ctrl.py  ESOdevice.py  Engineering.py  FLI_Cameras.py  FLI_Cameras_flisdk.py  FLI_Cameras_shm.py  FLI_camera.py  Instrument.py  Lamps.py  MultiDeviceServer.py  NewportMotor.py  PDU_telnet.py  ZaberMotor.py  agifbBackEnd.py  agifbBackEnd_2.py  controllino.py  example_eso_dev.py  old_MultiDeviceServer.py  tempWD.py  test_cooling.py  
baldr_onsky_tests/: pupil_flux_stability.py
calibration/: #bias_DM_onsky,py#  baldr_calibration.py  baldr_calibration_pipeline_example.sh  baldr_phasemask_scan_all_beams.sh  bias_DM_onsky,py  build_IM copy.py  build_IM.py  build_IM_standard.sh  build_baldr_control_matrix copy.py  build_baldr_control_matrix.py  build_strehl_model.py  ccc  copy_config_2_dcs.sh  copy_configs_to_stable_versions.sh  delme.py  demo_tests.sh  detect_cropped_pupils_coords.py  dm_flat_offset_cal.py  dm_registration.py  dm_registration_calibration.py  dmflat_focus_offset.py  fine_phasemask_alignment.py  gen_dark.py  gen_dark_bias_badpix.py  gen_dark_bias_badpix_NOW_IN_DCS.py  gen_raw_baldr_flats.py  gen_raw_flats.py  kolmogorov_phasescreen_on_dm.py  live_onsky_I0_ref_update.py  phasemask_raster.py  phasemask_routine.py  pokeramps.py  pupil_registration.py  quick_savestates_n_img.py  reco_verification.py  run_something_frequently.py  save_dm_shape.py  (+6 more)
common/: m_darks.py  (+39 more)
(+179 files in other folders)
