[project]
name = "asgard-alignment"
version = "0.0.1"
# description = "A package to align asgard"
readme = "README.md"
requires-python =">=3.8"
license = {file = "LICENSE"}

[project.scripts] 
shutdown-instrument = "asgard_alignment.common.shutdown_instrument:main"
test-cmd-script = "asgard_alignment.cmd_scripts.test_cmd_script:main"
h-autoalign = "asgard_alignment.cmd_scripts.h_autoalign:main"

[tool.hatch.build.targets.wheel]
packages = ["asgard_alignment"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
