[project]
name = "asgard-alignment"
version = "0.0.1"
# description = "A package to align asgard"
readme = "README.md"
requires-python =">=3.8"
license = {file = "LICENSE"}

[project.scripts] 
test-cmd-script = "asgard_alignment.cmd_scripts.test_cmd_script:main"
h-autoalign = "asgard_alignment.cmd_scripts.h_autoalign:main"
instrument-shutdown = "asgard_alignment.cmd_scripts.shutdown_instrument:main"
instrument-startup = "asgard_alignment.cmd_scripts.startup_instrument:main"

[tool.hatch.build.targets.wheel]
packages = ["asgard_alignment"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
